fix: header z-index

--- a/src/app/posts/page.module.css
+++ b/src/app/posts/page.module.css
@@ -5,6 +5,7 @@
 }
 
 .header {
+  z-index: 3;
   margin-bottom: 2rem;
   padding-bottom: 1rem;
   position: relative;
